# nrf518pp

./: CMakeLists.txt  README.md  gdb.script  main.cpp  start_debugging.sh  start_gdbserver.sh  syscalls.c  syscalls.h
nrfpp/: CMakeLists.txt  ble_advertising_data.hpp  ble_app_timer.hpp  ble_application.cpp  ble_application.hpp  ble_characteristic.cpp  ble_characteristic.hpp  ble_peripheral_device.cpp  ble_peripheral_device.hpp  ble_service.cpp  ble_service.hpp  buzzer.cpp  buzzer.hpp  pwm.cpp  pwm.hpp  syscalls.c  syscalls.h  timer.hpp  uart.cpp  uart.hpp  uart_redirect.h  wrappers.c  wrappers.h
test_adv_data/: CMakeLists.txt  main.cpp
test_ble_advdata/: CMakeLists.txt  main.cpp
test_ble_led_control/: CMakeLists.txt  README  main.cpp
test_ble_service/: CMakeLists.txt  main.cpp
test_buzzer/: CMakeLists.txt  main.cpp
test_buzzer_led_timer/: CMakeLists.txt  main.cpp
test_pwm/: .CMakeLists.txt.swp  .gdb_history  .main.cpp.swp  CMakeLists.txt  main.cpp
test_timer/: .main.cpp.swp  CMakeLists.txt  main.cpp
test_uart/: CMakeLists.txt  main.cpp
testers/: CMakeLists.txt  test_adv_data.cpp
